<resources>
    <string name="facebook_app_id">1211443409015604</string>
    <string name="fb_login_protocol_scheme">fb1211443409015604</string>

    <string name="app_name"></string>
    <string name="title_registration">Registration</string>
    <string name="change_name"><u>Change name</u></string>
    <string name="edit_picture"><u>Edit picture</u></string>
    <string name="family">Family</string>
    <string name="guest">Guest</string>
    <string name="email">E-mail</string>
    <string name="phone">Telephone</string>
    <string name="password">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">guestName</string>
    <string name="nav_header_subtitle"><u>My profile</u></string>
    <string name="change"><b><u>Change</u></b></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="date_from_title">Select date from</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
